--- a/micro_services/Dockerfile1
+++ b/micro_services/Dockerfile1
@@ -1,6 +1,6 @@
 FROM ubuntu:latest
 RUN apt-get update -y
-RUN apt-get install -y python-pip wget
+RUN apt-get install -y python-pip
 RUN pip install flask
 COPY app1 /app
 WORKDIR /app
