--- a/micro_services/Dockerfile2
+++ b/micro_services/Dockerfile2
@@ -1,6 +1,4 @@
-FROM ubuntu:latest
-RUN apt-get update -y
-RUN apt-get install -y python-pip
+FROM python:3-slim
 RUN pip install flask
 COPY app2 /app
 WORKDIR /app
