--- a/data_volume/Dockerfile
+++ b/data_volume/Dockerfile
@@ -1,5 +1,3 @@
-FROM python:3
+FROM python:3-alpine
 COPY writer.py /
-WORKDIR /
-ENTRYPOINT ["python"]
-CMD ["writer.py", "data"]
+CMD ["python", "writer.py", "data"]
