--- a/micro_services/Dockerfile1
+++ b/micro_services/Dockerfile1
@@ -1,6 +1,5 @@
-FROM python:3-slim
+FROM python:3-alpine
 RUN pip install flask
 COPY app1 /app
 WORKDIR /app
-ENTRYPOINT ["python"]
-CMD ["app.py"]
+CMD ["python", "app.py"]
