--- a/python_rootless_with_watchdog/Dockerfile
+++ b/python_rootless_with_watchdog/Dockerfile
@@ -1,8 +1,9 @@
 FROM python:3-slim
 COPY app.py /
+COPY watchdog.py /
 RUN mkdir /user
 COPY data.txt /user
 RUN chown -R 1000:1000 /user
 WORKDIR /user
 USER 1000
-CMD ["/app.py"]
+CMD ["/watchdog.py"]
