--- a/hello_ubuntu/Dockerfile
+++ b/hello_ubuntu/Dockerfile
@@ -1,2 +1,7 @@
 FROM ubuntu:latest
+RUN apt-get -yq update
+RUN apt-get -yq dist-upgrade
+# now install anything you want
+# RUN apt-get install -yq [package]
 CMD ["/bin/bash"]
+
