--- a/examples/security_default_is_root/Dockerfile
+++ b/examples/security_default_is_root/Dockerfile
@@ -1,8 +1,4 @@
-FROM ubuntu:latest
-RUN apt-get -yq update
-RUN apt-get -yq dist-upgrade
+FROM bash:latest
 COPY app.sh /
-# now install anything you want
-# RUN apt-get install -yq [package]
 CMD ["/app.sh"]
 
