more docker issues from the last iteraton of the course

--- a/examples/docker_cpu_affinity/Dockerfile
+++ b/examples/docker_cpu_affinity/Dockerfile
@@ -1,6 +1,3 @@
-FROM ubuntu:latest
-RUN apt-get -qy update
-RUN apt-get -qy dist-upgrade
-RUN apt-get install -qy python3
-COPY app.py /app.py
-CMD ["/app.py"]
+FROM python:3-slim
+COPY app.py /
+CMD ./app.py
