--- a/examples/hello_ubuntu/Dockerfile
+++ b/examples/hello_ubuntu/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:latest
-RUN apt-get -yq update
-RUN apt-get -yq dist-upgrade
+# RUN apt-get -yq update
+# RUN apt-get -yq dist-upgrade
 # now install anything you want
 # RUN apt-get install -yq [package]
 CMD ["/bin/bash"]
