--- a/exercises/hello_gradle/Dockerfile
+++ b/exercises/hello_gradle/Dockerfile
@@ -1,6 +1,5 @@
-FROM openjdk:latest
-COPY HelloWorld.class /
-# The default working directory in docker is already "/"
-# so the following command is superfous...
-# WORKDIR /
-CMD ["java", "HelloWorld"]
+FROM gradle
+RUN mkdir /project
+COPY src build.gradle /project/
+WORKDIR /project
+CMD gradle build
