--- a/exercises/hello_java/Dockerfile
+++ b/exercises/hello_java/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:latest
 COPY HelloWorld.class /
 # The default working directory in docker is already "/"
-# so the following command is superfous...
+# so the following command is superfluous...
 # WORKDIR /
 CMD ["java", "HelloWorld"]
