--- a/exercises/hello_two_processes_inside_docker/Dockerfile
+++ b/exercises/hello_two_processes_inside_docker/Dockerfile
@@ -1,5 +1,6 @@
 FROM bash:latest
-COPY app1.bash /
-COPY app2.bash /
-COPY run_two_apps.bash /
+COPY *.bash /
+# COPY app1.bash /
+# COPY app2.bash /
+# COPY run_two_apps.bash /
 CMD ["/run_two_apps.bash"]
