no commit message given

--- a/exercises/volume_shared_data/Dockerfile
+++ b/exercises/volume_shared_data/Dockerfile
@@ -1,3 +1,4 @@
 FROM python:3-slim
 COPY app.py /
-CMD [ "/app.py" ]
+# we don't need a CMD command here since we will be supplying the command
+# on the command line
