--- a/examples/security_default_is_root/Dockerfile
+++ b/examples/security_default_is_root/Dockerfile
@@ -1,3 +1,6 @@
-FROM bash:latest
+# FROM bash:latest
+FROM ubuntu:latest
+RUN apt-get update -y
+RUN apt-get install -y libcap2-bin
 COPY app.sh /
 CMD ["/app.sh"]
