--- a/exercises/hello_nodejs/Dockerfile
+++ b/exercises/hello_nodejs/Dockerfile
@@ -1,5 +1,6 @@
 FROM node:latest
-RUN mkdir /app
-COPY hello.js /app
 WORKDIR /app
+COPY hello.js /app
+COPY package.json /app
+RUN npm install
 CMD ["hello.js"]
