--- a/examples/security_default_is_root/Dockerfile
+++ b/examples/security_default_is_root/Dockerfile
@@ -1,6 +1,6 @@
 # FROM bash:latest
 FROM ubuntu:latest
 RUN apt-get update -y
-RUN apt-get install -y libcap2-bin
+RUN apt-get install -y libcap2-bin systemd-sysv
 COPY app.sh /
 CMD ["/app.sh"]
