no commit message given

--- a/exercises/exec/Dockerfile
+++ b/exercises/exec/Dockerfile
@@ -1,6 +1,10 @@
 # FROM python:3-slim
+# FROM python:3-alpine
+# FROM python:3
 FROM ubuntu:latest
-COPY app.py /
 RUN apt-get update -y
 RUN apt-get install -y python3
+# RUN apt-get install -y cowsay
+# RUN apt-get install -y firefox
+COPY app.py /
 CMD ["/app.py"]
