--- a/examples/security_default_is_root/Dockerfile
+++ b/examples/security_default_is_root/Dockerfile
@@ -1,5 +1,5 @@
-# FROM bash:latest
-FROM ubuntu:latest
+# FROM bash
+FROM ubuntu
 RUN apt-get update -y
 RUN apt-get install -y libcap2-bin systemd-sysv iproute2
 COPY app.sh /
