--- a/exercises/exec/Dockerfile
+++ b/exercises/exec/Dockerfile
@@ -1,7 +1,7 @@
 # FROM python:3-slim
 # FROM python:3-alpine
 # FROM python:3
-FROM ubuntu:latest
+FROM ubuntu
 RUN apt-get update -y
 RUN apt-get install -y python3
 # RUN apt-get install -y cowsay
