--- a/exercises/from_flask_to_docker_to_minikube/Dockerfile
+++ b/exercises/from_flask_to_docker_to_minikube/Dockerfile
@@ -1,4 +1,6 @@
 FROM python:3-slim
+ENV PIP_ROOT_USER_ACTION=ignore
+RUN pip install --upgrade pip
 RUN pip install flask
 COPY app.py /
 CMD ["/app.py"]
