--- a/exercises/hello_python_with_flask/Dockerfile
+++ b/exercises/hello_python_with_flask/Dockerfile
@@ -1,4 +1,6 @@
 FROM python:3-alpine
+ENV PIP_ROOT_USER_ACTION=ignore
+RUN pip install --upgrade pip
 RUN pip install flask
 RUN mkdir app
 COPY app.py /app
