no commit message given

--- a/exercises/volume_shared_data/Dockerfile
+++ b/exercises/volume_shared_data/Dockerfile
@@ -1,4 +1,5 @@
 FROM python:3-alpine
-COPY app.py /
+# COPY app.py /
+COPY app_real.py /app.py
 # we don't need a CMD command here since we will be supplying the command
 # on the command line
