--- a/exercises/compose_visualization/docker-compose.yml
+++ b/exercises/compose_visualization/docker-compose.yml
@@ -16,3 +16,5 @@ services:
     environment:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
+    links:
+      - "prometheus:grafana"
