--- a/exercises/jenkins_preconfigured/Dockerfile
+++ b/exercises/jenkins_preconfigured/Dockerfile
@@ -7,7 +7,7 @@ FROM jenkins/jenkins:latest
 # on that system, issuing:
 # $ ls /var/jenkins_home/plugins/*.jpi > plugins.txt
 # and then removing the .jpi suffix of each line
-COPY --chown=jenkins:jenkins plugins_docker_k8s_ocean.txt /usr/share/jenkins/ref/plugins.txt
+COPY --chown=jenkins:jenkins plugins_all.txt /usr/share/jenkins/ref/plugins.txt
 RUN jenkins-plugin-cli --verbose -f /usr/share/jenkins/ref/plugins.txt
 
 # don't run the setup wizard and have constant user and password
@@ -15,4 +15,7 @@ ENV JAVA_OPTS="-Djenkins.install.runSetupWizard=false"
 ENV JENKINS_USER="admin"
 ENV JENKINS_PASS="admin"
 ENV JENKINS_URL="http://localhost:8080"
+ENV CASC_JENKINS_CONFIG="/usr/share/jenkins/ref/jenkins.yaml"
+
 COPY init.groovy /usr/share/jenkins/ref/init.groovy.d/init.groovy
+COPY jenkins.yaml /usr/share/jenkins/ref/jenkins.yaml
