--- a/exercises/jenkins_preconfigured/config.yaml
+++ b/exercises/jenkins_preconfigured/config.yaml
@@ -1,3 +1,3 @@
 # this is the jenkins configuration
 # You can get it from jenkins if you go to:
-# manage jenkins -> Configuration as code ->
+# Manage Jenkins -> Configuration as Code -> {View|Download} Configuration
