--- a/compose/exercises/nodejs_postgresql/docker-compose.yml
+++ b/compose/exercises/nodejs_postgresql/docker-compose.yml
@@ -7,7 +7,10 @@ services:
       - postgres-data:/var/lib/postgresql/data
 
   node:
-    image: node:latest
+    build:
+      context: app
+      dockerfile: Dockerfile
+    image: app:latest
     ports:
       - "8080:8080"
     environment:
@@ -19,7 +22,6 @@ services:
       - postgres
     links:
       - "postgres:postgres"
-    command: bash -c "sleep 3600"
 
 volumes:
   postgres-data:
