--- a/compose/exercises/nodejs_postgresql/docker-compose.yml
+++ b/compose/exercises/nodejs_postgresql/docker-compose.yml
@@ -1,4 +1,5 @@
 services:
+  # https://github.com/docker-library/docs/blob/master/postgres/README.md
   postgres:
     image: postgres:latest
     restart: always
@@ -7,15 +8,13 @@ services:
     environment:
       POSTGRES_PASSWORD: db_password
     volumes:
-      - "postgres-data:/var/lib/postgresql/data"
+      - "postgres_data:/var/lib/postgresql/data"
 
   adminer:
     image: adminer
     restart: always
     ports:
       - "8080:8080"
-    links:
-      - "postgres:db"
 
   postgrest:
     image: postgrest/postgrest
@@ -26,8 +25,6 @@ services:
       PGRST_OPENAPI_SERVER_PROXY_URI: http://127.0.0.1:3000
     depends_on:
       - postgres
-    links:
-      - "postgres:postgres"
 
   node:
     build:
@@ -43,8 +40,6 @@ services:
       DB_NAME: db_name
     depends_on:
       - postgres
-    links:
-      - "postgres:postgres"
 
 volumes:
-  postgres-data:
+  postgres_data:
