--- a/compose/exercises/nodejs_postgresql/docker-compose.yml
+++ b/compose/exercises/nodejs_postgresql/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - "3001:3000"
     environment:
       PGRST_DB_URI: postgres://postgres:db_password@postgres:5432/postgres
-      PGRST_OPENAPI_SERVER_PROXY_URI: http://127.0.0.1:3000
+        # PGRST_OPENAPI_SERVER_PROXY_URI: http://127.0.0.1:3000
     depends_on:
       - postgres
 
