--- a/compose/exercises/nodejs_postgresql/docker-compose.yml
+++ b/compose/exercises/nodejs_postgresql/docker-compose.yml
@@ -29,12 +29,10 @@ services:
     image: postgrest/postgrest
     restart: unless-stopped
     ports:
-      - "3000:3000"
+      - "3001:3001"
     environment:
       PGRST_DB_URI: postgres://postgres:db_password@postgres:5432/postgres
-      db-schemas: "api"
-      db-anon-role: "web_anon"
-      # PGRST_OPENAPI_SERVER_PROXY_URI: http://127.0.0.1:3000
+      PGRST_SERVER_PORT: 3001
     depends_on:
       - postgres
 
@@ -44,12 +42,7 @@ services:
       dockerfile: Dockerfile
     image: app:latest
     ports:
-      - "3001:3001"
-    environment:
-      DB_HOST: postgres
-      DB_USER: postgres
-      DB_PASSWORD: db_password
-      DB_NAME: db_name
+      - "3000:3000"
     depends_on:
       - postgres
 
