no commit message given

--- a/compose/exercises/nodejs_postgresql/docker-compose.yml
+++ b/compose/exercises/nodejs_postgresql/docker-compose.yml
@@ -59,6 +59,8 @@ services:
       context: app
       dockerfile: Dockerfile
     image: app:latest
+    environment:
+      PORT: "3000"
     ports:
       - "3000:3000"
     depends_on:
