--- a/compose/exercises/nodejs_postgresql/docker-compose.yml
+++ b/compose/exercises/nodejs_postgresql/docker-compose.yml
@@ -35,21 +35,25 @@ services:
     restart: unless-stopped
     ports:
       - "3001:3001"
+    volumes:
+      - ./postgrest.conf:/app/config.ron
     environment:
       PGRST_DB_URI: postgres://postgres:db_password@postgres:5432/postgres
       PGRST_SERVER_PORT: 3001
       # PGRST_OPENAPI_SERVER_PROXY_URI: http://127.0.0.1:3001
-      # PGRST_SERVER_CORS_ALLOWED_ORIGINS: "Y"
+      PGRST_DB_ANON_ROLE: "postgres"
+      PGRST_SERVER_CORS_ALLOWED_ORIGINS: "Y"
     depends_on:
       - postgres
 
+  # https://hub.docker.com/r/swaggerapi/swagger-ui
   swagger:
     image: swaggerapi/swagger-ui
+    restart: unless-stopped
     ports:
       - "8081:8080"
     environment:
-      # API_URL: http://postgrest:3001/
-      API_URL: http://node:3000/
+      API_URL: http://postgrest:3001/
     depends_on:
       - postgrest
       - postgres
@@ -59,6 +63,7 @@ services:
       context: app
       dockerfile: Dockerfile
     image: app:latest
+    restart: unless-stopped
     environment:
       PORT: "3000"
     ports:
