no commit message given

--- a/compose/exercises/nodejs_postgresql/.env
+++ b/compose/exercises/nodejs_postgresql/.env
@@ -13,3 +13,4 @@ env_postgrest_host="postgrest"
 env_postgrest_access="localhost"
 env_postgres_port="5432"
 env_adminer_port="8080"
+env_adminer_db_type="postgresql"
