no commit message given

--- a/compose/exercises/nodejs_postgresql/docker-compose.yml
+++ b/compose/exercises/nodejs_postgresql/docker-compose.yml
@@ -61,6 +61,8 @@ services:
       context: app
       dockerfile: Dockerfile
     image: app
+    env_file:
+      - .env
     restart: unless-stopped
     ports:
       - "${env_app_port}:${env_app_port}"
