--- a/compose/exercises/nodejs_postgresql/.env
+++ b/compose/exercises/nodejs_postgresql/.env
@@ -8,9 +8,9 @@ env_db_user="postgres"
 env_db_password="db_password"
 env_db_port="5432"
 env_db_host="postgres"
+env_db_access="localhost"
 env_postgrest_port="3001"
 env_postgrest_host="postgrest"
 env_postgrest_access="localhost"
-env_postgres_port="5432"
 env_adminer_port="8080"
 env_adminer_db_type="postgresql"
