--- a/compose/exercises/nodejs_postgresql/app/Dockerfile
+++ b/compose/exercises/nodejs_postgresql/app/Dockerfile
@@ -1,7 +1,6 @@
 FROM node:latest
 WORKDIR /app
 COPY server.js /app
-COPY package.json /app
-COPY package-lock.json /app
+COPY package.json package-lock.json /app/
 RUN npm install
 CMD ["server.js"]
