--- a/compose/exercises/visualization/docker-compose.yml
+++ b/compose/exercises/visualization/docker-compose.yml
@@ -1,20 +1,18 @@
-version: '3'
-
 services:
 
   prometheus:
-    image: prom/prometheus
+    image: "prom/prometheus"
     ports:
-      - 9090:9090
+      - "9090:9090"
 
   grafana:
-    image: grafana/grafana
+    image: "grafana/grafana"
     depends_on:
-      - prometheus
+      - "prometheus"
     ports:
-      - 3000:3000
+      - "3000:3000"
     environment:
-      - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - "GF_SECURITY_ADMIN_USER=admin"
+      - "GF_SECURITY_ADMIN_PASSWORD=admin"
     links:
       - "prometheus:grafana"
