--- a/examples/python_with_pytest/Dockerfile
+++ b/examples/python_with_pytest/Dockerfile
@@ -6,4 +6,4 @@ RUN mkdir myapp
 COPY module /myapp/module
 COPY tests /myapp/tests
 WORKDIR myapp
-CMD PYTHONPATH=. python -m pytest
+CMD ["PYTHONPATH=.","python","-m","pytest"]
