--- a/exercises/hello_python_with_modules/Dockerfile
+++ b/exercises/hello_python_with_modules/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3-slim
+FROM python:3-alpine
 ENV PIP_ROOT_USER_ACTION=ignore
 RUN pip install --upgrade pip
 RUN python -m pip install --upgrade pip
