no commit message given

--- a/compose/exercises/nodejs_postgresql/docker-compose.yml
+++ b/compose/exercises/nodejs_postgresql/docker-compose.yml
@@ -5,10 +5,8 @@ services:
     restart: unless-stopped
     ports:
       - "${env_db_port}:${env_db_port}"
-    secrets:
-      - postgres_password
     environment:
-      POSTGRES_PASSWORD_FILE: /run/secrets/postgres_password
+      - POSTGRES_PASSWORD=${env_db_password}
     volumes:
       - "postgres_data:/var/lib/postgresql/data"
     healthcheck:
@@ -21,13 +19,11 @@ services:
   adminer:
     image: adminer
     restart: unless-stopped
-    env_file:
-      - "${HOME}/.env"
     environment:
-      # ADMINER_DATA: purge
-      # ADMINER_ROOT: postgres
-      # ADMINER_DEFAULT_SERVER: postgres
-      DATABASE_URL: "${env_adminer_db_type}://${env_db_user}:${env_db_password}@${env_db_host}:${env_db_port}/${env_db_name}"
+      # - ADMINER_DATA=purge
+      # - ADMINER_ROOT=postgres
+      # - ADMINER_DEFAULT_SERVER=postgres
+      - DATABASE_URL=${env_adminer_db_type}://${env_db_user}:${env_db_password}@${env_db_host}:${env_db_port}/${env_db_name}
     ports:
       - "${env_adminer_port}:${env_adminer_port}"
     depends_on:
@@ -39,14 +35,12 @@ services:
     restart: unless-stopped
     ports:
       - "${env_postgrest_port}:${env_postgrest_port}"
-    env_file:
-      - "${HOME}/.env"
     environment:
-      PGRST_DB_URI: "${env_db_type}://${env_db_user}:${env_db_password}@${env_db_host}:${env_db_port}/${env_db_name}"
-      PGRST_SERVER_PORT: "${env_postgrest_port}" 
-      PGRST_OPENAPI_SERVER_PROXY_URI: "http://127.0.0.1:${env_postgrest_port}"
-      PGRST_DB_ANON_ROLE: "${env_db_user}"
-      PGRST_SERVER_CORS_ALLOWED_ORIGINS: "Y"
+      - PGRST_DB_URI=${env_db_type}://${env_db_user}:${env_db_password}@${env_db_host}:${env_db_port}/${env_db_name}
+      - PGRST_SERVER_PORT=${env_postgrest_port}
+      - PGRST_OPENAPI_SERVER_PROXY_URI=http://127.0.0.1:${env_postgrest_port}
+      - PGRST_DB_ANON_ROLE=${env_db_user}
+      - PGRST_SERVER_CORS_ALLOWED_ORIGINS=Y
     depends_on:
       - postgres
 
@@ -56,8 +50,6 @@ services:
     restart: unless-stopped
     ports:
       - "8081:8080"
-    env_file:
-      - "${HOME}/.env"
     environment:
       API_URL: "http://${env_postgrest_host}:${env_postgrest_port}/"
     depends_on:
@@ -69,8 +61,6 @@ services:
       context: app
       dockerfile: Dockerfile
     image: app
-    env_file:
-      - "${HOME}/.env"
     restart: unless-stopped
     ports:
       - "${env_app_port}:${env_app_port}"
@@ -80,7 +70,3 @@ services:
 
 volumes:
   postgres_data:
-
-secrets:
-  postgres_password:
-    file: "${HOME}/.secrets/postgres_password.txt"
