this I'm sure of

--- a/compose/examples/envrionment_variables_interpolation/docker-compose.yml
+++ b/compose/examples/envrionment_variables_interpolation/docker-compose.yml
@@ -1,11 +1,12 @@
 services:
   my_service:
     environment:
-      more: ${PATH}
+      more1: ${PATH}
       more2: "${PATH}"
       more3: "${USER}:${PATH}"
     environment:
-      - more=${PATH}
+      - more1=${PATH}
       - more2="${PATH}"
       - more3="${USER}:${PATH}"
+      - more4=${USER}:${PATH}
     image: hello
