no commit message given

--- a/compose/exercises/health_check/first/Dockerfile
+++ b/compose/exercises/health_check/first/Dockerfile
@@ -1,8 +1,10 @@
 FROM python:3-alpine
 ENV PIP_ROOT_USER_ACTION=ignore
 RUN pip install --upgrade pip
-RUN pip install flask
+RUN pip install flask requests
 RUN mkdir app
-COPY app.py /app
+COPY *.py /app
 WORKDIR app
 CMD ["./app.py"]
+
+HEALTHCHECK --interval=3s --timeout=3s CMD /app/curl.py http://localhost:8080/
