--- a/compose/exercises/health_check/second/Dockerfile
+++ b/compose/exercises/health_check/second/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3-alpine
 ENV PIP_ROOT_USER_ACTION=ignore
 RUN pip install --upgrade pip
-RUN pip install flask
+RUN pip install requests
 RUN mkdir app
 COPY app.py /app
 WORKDIR app
