--- a/exercises/java_build_gradle_in_docker/build.gradle
+++ b/exercises/java_build_gradle_in_docker/build.gradle
@@ -1,9 +1,25 @@
-apply plugin: 'java'
-
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(17) // or whatever version you want to use
-    }
+plugins {
+    id 'java'
+    id 'application'
 }
 
-version=1.1
+group 'com.company'
+version '1.0'
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+}
+
+application {
+    mainClass = 'com.company.App'
+}
+
+test {
+    useJUnitPlatform()
+}
