no commit message given

--- a/exercises/java_build_gradle_in_docker/build.gradle
+++ b/exercises/java_build_gradle_in_docker/build.gradle
@@ -23,3 +23,11 @@ application {
 test {
     useJUnitPlatform()
 }
+
+jar {
+    manifest {
+        attributes(
+            'Main-Class': application.mainClass
+        )
+    }
+}
