--- a/exercises/java_build_gradle_in_docker/Dockerfile
+++ b/exercises/java_build_gradle_in_docker/Dockerfile
@@ -1,16 +1,9 @@
-# FROM maven:3.8.7-openjdk-18 AS build
-FROM maven:latest AS build
+FROM gradle:8.5-jdk17 AS build
 WORKDIR /app
-# Notice the two stages to utilize the cache better assuming pom.xml
-# did not change
-COPY pom.xml /app
-RUN mvn dependency:go-offline
-RUN mvn dependency:copy-dependencies -DoutputDirectory=target/dependencies
-
-COPY src /app/src
-RUN mvn package -DskipTests
-
-FROM openjdk:18-jdk-slim
+COPY build.gradle settings.gradle ./
+COPY src ./src
+RUN gradle build --no-daemon
+FROM openjdk:17-slim
 WORKDIR /app
-COPY --from=build /app/target/app-1.0.jar /app/target/dependencies /app
-CMD ["java", "-cp", "./*", "com.company.HelloWorld"]
+COPY --from=build /app/build/libs/*.jar app.jar
+ENTRYPOINT ["java", "-jar", "app.jar"]
