no commit message given

--- a/exercises/java_build_gradle_in_docker/Dockerfile
+++ b/exercises/java_build_gradle_in_docker/Dockerfile
@@ -2,8 +2,8 @@ FROM gradle:8.5-jdk17 AS build
 WORKDIR /app
 COPY build.gradle settings.gradle ./
 COPY src ./src
-RUN gradle build --no-daemon
+RUN gradle uberJar --no-daemon
 FROM openjdk:17-slim
 WORKDIR /app
-COPY --from=build /app/build/libs/*.jar app.jar
+COPY --from=build /app/build/libs/*-uber.jar app.jar
 ENTRYPOINT ["java", "-jar", "app.jar"]
