--- a/exercises/java_build_gradle_in_docker/build.gradle
+++ b/exercises/java_build_gradle_in_docker/build.gradle
@@ -31,3 +31,20 @@ jar {
         )
     }
 }
+
+tasks.register('uberJar', Jar) {
+    archiveClassifier = 'uber'
+
+    from sourceSets.main.output
+
+    dependsOn configurations.runtimeClasspath
+    from {
+        configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }
+    }
+
+    manifest {
+        attributes 'Main-Class': application.mainClass
+    }
+
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
