no commit message given

--- a/exercises/java_build_gradle_in_docker/Dockerfile
+++ b/exercises/java_build_gradle_in_docker/Dockerfile
@@ -1,9 +1,11 @@
 FROM gradle:8.5-jdk17 AS build
 WORKDIR /app
 COPY build.gradle settings.gradle ./
+RUN gradle dependencies --no-daemon
 COPY src ./src
 RUN gradle uberJar --no-daemon
+
 FROM openjdk:17-slim
 WORKDIR /app
-COPY --from=build /app/build/libs/*-uber.jar app.jar
-ENTRYPOINT ["java", "-jar", "app.jar"]
+COPY --from=build /app/build/libs/myapp-1.0-uber.jar ./
+ENTRYPOINT ["java", "-jar", "myapp-1.0-uber.jar"]
