no commit message given

--- a/exercises/java_build_maven_in_docker/pom.xml
+++ b/exercises/java_build_maven_in_docker/pom.xml
@@ -17,6 +17,16 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.12.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.8.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.8.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
