--- a/exercises/python_with_flask_with_requirements/Dockerfile
+++ b/exercises/python_with_flask_with_requirements/Dockerfile
@@ -1,10 +1,15 @@
 FROM python:3-alpine
+
+# upgrade pip to latest version and configure it to shut up
 ENV PIP_ROOT_USER_ACTION=ignore
 RUN pip install --upgrade pip
-RUN pip install flask
+
+# install requirement
+COPY requirements.txt /app
+RUN pip install -r /app/requirements.txt
+
+# install your app
 RUN mkdir /app
 COPY app.py /app
-COPY requirements.txt /app
 WORKDIR /app
-RUN pip install -r requirements.txt
 CMD ["./app.py"]
