--- a/exercises/security_running_as_user/Dockerfile
+++ b/exercises/security_running_as_user/Dockerfile
@@ -2,10 +2,10 @@ FROM bash
 # This is the simple example
 # CMD ["/usr/bin/id"]
 # This is the complex example
-RUN mkdir /home/foo
-COPY app.sh /home/foo
-RUN chown -R 2020:2020 /home/foo
-WORKDIR /home/foo
+RUN mkdir /myapp
+COPY app.sh /myapp
+RUN chown -R 2020:2020 /myapp
+WORKDIR /myapp
 USER 2020:2020
 CMD ["./app.sh"]
-# CMD ["/home/foo/app.sh"]
+# CMD ["/myapp/app.sh"]
