no commit message given

--- a/exercises/volume_data/Dockerfile
+++ b/exercises/volume_data/Dockerfile
@@ -1,4 +1,4 @@
 FROM python:3-alpine
-# COPY writer.py /
-COPY writer_complex.py /writer.py
+COPY writer.py /writer.py
+# COPY writer_complex.py /writer.py
 CMD ["/writer.py"]
