--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 alabaster==1.0.0
-astroid==3.3.8
-attrs==25.1.0
+astroid==3.3.9
+attrs==25.3.0
 babel==2.17.0
 beautifulsoup4==4.13.3
 black==25.1.0
@@ -9,11 +9,11 @@ certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
-coverage==7.6.11
-cryptography==44.0.0
+coverage==7.8.0
+cryptography==44.0.2
 dill==0.3.9
 docutils==0.21.2
-flake8==7.1.1
+flake8==7.2.0
 Flask==3.1.0
 gitdb==4.0.12
 GitPython==3.1.44
@@ -21,19 +21,19 @@ html5lib==1.1
 id==1.5.0
 idna==3.10
 imagesize==1.4.1
-iniconfig==2.0.0
-isort==6.0.0
+iniconfig==2.1.0
+isort==6.0.1
 itsdangerous==2.2.0
 jaraco.classes==3.4.0
 jaraco.context==6.0.1
 jaraco.functools==4.1.0
-jeepney==0.8.0
-Jinja2==3.1.5
+jeepney==0.9.0
+Jinja2==3.1.6
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 keyring==25.6.0
 logging_tree==1.10
-lxml==5.3.0
+lxml==5.3.1
 Mako==1.3.9
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -43,30 +43,30 @@ more-itertools==10.6.0
 mypy==1.15.0
 mypy-extensions==1.0.0
 mysql-connector-python==9.2.0
-nh3==0.2.20
-numpy==2.2.2
+nh3==0.2.21
+numpy==2.2.4
 packaging==24.2
 pandas==2.2.3
 pathspec==0.12.1
-platformdirs==4.3.6
+platformdirs==4.3.7
 pluggy==1.5.0
 pycmdtools==0.0.85
-pycodestyle==2.12.1
+pycodestyle==2.13.0
 pycparser==2.22
 pydmt==0.3.19
 pyfakeuse==0.0.9
-pyflakes==3.2.0
+pyflakes==3.3.1
 Pygments==2.19.1
-pylint==3.3.4
+pylint==3.3.6
 pylogconf==0.0.38
 pymakehelper==0.0.35
 pypitools==0.0.79
 pytconf==0.1.18
-pytest==8.3.4
+pytest==8.3.5
 pytest-cov==6.0.0
 python-dateutil==2.9.0.post0
 pytidylib==0.3.2
-pytz==2025.1
+pytz==2025.2
 pyvardump==0.0.5
 PyYAML==6.0.2
 readme_renderer==44.0
@@ -74,15 +74,16 @@ referencing==0.36.2
 requests==2.32.3
 requests-toolbelt==1.0.0
 rfc3986==2.0.0
-rich==13.9.4
-rpds-py==0.22.3
+rich==14.0.0
+roman-numerals-py==3.1.0
+rpds-py==0.24.0
 SecretStorage==3.3.3
-setuptools==75.8.0
+setuptools==78.1.0
 six==1.17.0
 smmap==5.0.2
 snowballstemmer==2.2.0
 soupsieve==2.6
-Sphinx==8.1.3
+Sphinx==8.2.3
 sphinxcontrib-applehelp==2.0.0
 sphinxcontrib-devhelp==2.0.0
 sphinxcontrib-htmlhelp==2.1.0
@@ -93,9 +94,9 @@ termcolor==2.5.0
 tomlkit==0.13.2
 tqdm==4.67.1
 twine==6.1.0
-types-requests==2.32.0.20241016
-typing_extensions==4.12.2
-tzdata==2025.1
+types-requests==2.32.0.20250328
+typing_extensions==4.13.0
+tzdata==2025.2
 Unidecode==1.3.8
 urllib3==2.3.0
 venv-run==0.2.0
