--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
 alabaster==1.0.0
-astroid==3.3.9
+astroid==3.3.10
 attrs==25.3.0
 babel==2.17.0
-beautifulsoup4==4.13.3
+beautifulsoup4==4.13.4
 black==25.1.0
 blinker==1.9.0
-certifi==2025.1.31
+certifi==2025.4.26
 cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-coverage==7.8.0
-cryptography==44.0.2
-dill==0.3.9
+charset-normalizer==3.4.2
+click==8.2.1
+coverage==7.8.2
+cryptography==45.0.3
+dill==0.4.0
 docutils==0.21.2
 flake8==7.2.0
-Flask==3.1.0
+Flask==3.1.1
 gitdb==4.0.12
 GitPython==3.1.44
 html5lib==1.1
@@ -29,41 +29,41 @@ jaraco.context==6.0.1
 jaraco.functools==4.1.0
 jeepney==0.9.0
 Jinja2==3.1.6
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
 keyring==25.6.0
 logging_tree==1.10
-lxml==5.3.1
-Mako==1.3.9
+lxml==5.4.0
+Mako==1.3.10
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mccabe==0.7.0
 mdurl==0.1.2
-more-itertools==10.6.0
-mypy==1.15.0
-mypy-extensions==1.0.0
-mysql-connector-python==9.2.0
+more-itertools==10.7.0
+mypy==1.16.0
+mypy_extensions==1.1.0
+mysql-connector-python==9.3.0
 nh3==0.2.21
-numpy==2.2.4
-packaging==24.2
+numpy==2.2.6
+packaging==25.0
 pandas==2.2.3
 pathspec==0.12.1
-platformdirs==4.3.7
-pluggy==1.5.0
+platformdirs==4.3.8
+pluggy==1.6.0
 pycmdtools==0.0.85
 pycodestyle==2.13.0
 pycparser==2.22
 pydmt==0.3.19
 pyfakeuse==0.0.9
-pyflakes==3.3.1
+pyflakes==3.3.2
 Pygments==2.19.1
-pylint==3.3.6
+pylint==3.3.7
 pylogconf==0.0.38
-pymakehelper==0.0.35
+pymakehelper==0.0.37
 pypitools==0.0.79
 pytconf==0.1.18
 pytest==8.3.5
-pytest-cov==6.0.0
+pytest-cov==6.1.1
 python-dateutil==2.9.0.post0
 pytidylib==0.3.2
 pytz==2025.2
@@ -76,13 +76,13 @@ requests-toolbelt==1.0.0
 rfc3986==2.0.0
 rich==14.0.0
 roman-numerals-py==3.1.0
-rpds-py==0.24.0
+rpds-py==0.25.1
 SecretStorage==3.3.3
-setuptools==78.1.0
+setuptools==80.9.0
 six==1.17.0
 smmap==5.0.2
-snowballstemmer==2.2.0
-soupsieve==2.6
+snowballstemmer==3.0.1
+soupsieve==2.7
 Sphinx==8.2.3
 sphinxcontrib-applehelp==2.0.0
 sphinxcontrib-devhelp==2.0.0
@@ -90,15 +90,15 @@ sphinxcontrib-htmlhelp==2.1.0
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==2.0.0
 sphinxcontrib-serializinghtml==2.0.0
-termcolor==2.5.0
+termcolor==3.1.0
 tomlkit==0.13.2
 tqdm==4.67.1
 twine==6.1.0
-types-requests==2.32.0.20250328
-typing_extensions==4.13.0
+types-requests==2.32.0.20250515
+typing_extensions==4.13.2
 tzdata==2025.2
-Unidecode==1.3.8
-urllib3==2.3.0
+Unidecode==1.4.0
+urllib3==2.4.0
 venv-run==0.2.0
 webencodings==0.5.1
 Werkzeug==3.1.3
