--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ pandas==2.2.3
 pathspec==0.12.1
 platformdirs==4.3.8
 pluggy==1.6.0
+pyclassifiers==0.0.19
 pycmdtools==0.0.85
 pycodestyle==2.13.0
 pycparser==2.22
